--- a/my sites/HomePage.html
+++ b/my sites/HomePage.html
@@ -17,22 +17,22 @@
 
 <body>
   <header class="hidden">
-    <nav class="navbar navbar-expand-lg navbar-dark shadow-5-strong">
+    <nav class="navbar navbar-expand-lg navbar-dark shadow-5-strong ">
       <!-- Navbar brand -->
       <a class="navbar-brand" href="#"><img class="logo" src="./logos/k.png" alt=""></a>
       <!-- toggler button -->
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      <button class="navbar-toggler" type="button" data-toggle="" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <!-- google fonts icon for toggler button -->
         <span class="material-symbols-outlined">sort</span>
-
       </button>
+      <!-- toggler button end -->
       <!--main elements-->
       <div class="collapse navbar-collapse" id="navbarNav">
 
         <ul class="navbar-nav">
 
-          <li class="nav-item active"><a class="nav-link" href="#" target="_blank"><img class="logo"
+          <li class="nav-item"><a class="nav-link" href="#" target="_blank"><img class="logo"
                 src="./logos/home.png" alt="Home">Home</a></li>
 
           <li class="nav-item"><a class="nav-link" href="Contact US.html"><img class="logo" src="./logos/support.png"
@@ -43,10 +43,10 @@
           </li>
 
           <li class="nav-item"><a class="nav-link" href="https://github.com/karan4268" Target="_blank"><img class="logo"
-                src="./logos/github-mark 2.png" alt="Github">GitHUb</a>
+                src="./logos/github-mark 2.png" alt="Github">Git</a>
           </li>
           <li class="nav-item"><a class="nav-link" href="./calculator.html" Target="_blank"><img class="logo"
-                src="./logos/pro.png" alt="projects">My Projects</a>
+                src="./logos/Dashboard.png" alt="projects">My Projects</a>
           </li>
         </ul>
       </div>
@@ -63,40 +63,63 @@
   </script>
   <!-- scroll animation script -->
   <script defer src="./JS/scoll animation.js"></script>
-  <h2 style="text-justify: auto;padding: 10px;color: antiquewhite;font-weight: 100; text-align: center;">
-    This is my First Project in Web Devlopment ^_^
+  <h2 style="text-justify: auto;padding: 10px;color: antiquewhite;font-weight: 1; text-align: center;">
+    This is my Play ground for learning new things.
   </h2>
   <section class="hidden">
-    <p
-      style="text-justify: auto;padding: 10px;color: antiquewhite;font-weight: 100;text-align: center; font-size: larger;">
-      So far I have learned HTML,CSS,Animations in CSS.</p>
+    <p class="hidden"
+      style="text-justify:  auto;padding: 10px;color: antiquewhite;font-weight: 1.2em;text-align: center; font-size: larger;">
+      (new stylrs and tricks i learned ).</p>
+      <!-- blank space -->
   </section>
-  <!-- clickable  logos -->
-  <section class="hidden">
-    <p style="color: antiquewhite;font-size: larger;">
-      Things I need to learn:-
-      <span class="learn">
-        <div class="learn">
-          <div class="hidden" id="alp"><a href="https://en.wikipedia.org/wiki/Microsoft_Azure"
-              target="_blank"><img src="./logos/Microsoft_Azure.svg (Custom).png" alt="Azure"></div></a>
 
-          <div class="hidden" id="alp"><a href="https://en.wikipedia.org/wiki/JavaScript" target="_blank"><img
-                src="./logos/Js.webp" alt="Java scrip"></div></a>
+<!-- LOGO TILES -->
+<P class="hidden"
+  style="text-justify: auto;padding: 10px;color: antiquewhite;font-weight: 1.2em;text-align: center; font-size: larger;">
+  Click on the logos to learn more about them.</p>
 
-          <div class="hidden" id="alp"><a href="https://en.wikipedia.org/wiki/SQL" target="_blank"><img
-                src="./logos/sql.png" alt="SQL"></div></a>
+  <div class="learn"><!-- container -->
 
-          <div class="hidden" id="alp"><a href="https://en.wikipedia.org/wiki/React_(software)" target="_blank"><img
-                src="./logos/power-bi-icon.png" alt="POWER Bi"></div></a>
-        </div>
-    </p>
-    </span>
-  </section>
+  <div class="glass hidden">
+    <!--logos-->
+    <div class="hidden" id="logo2">
+      <a class="logos" href="https://en.wikipedia.org/wiki/Microsoft_Azure" target="_blank">
+        <img src="./logos/Microsoft_Azure.svg (Custom).png" alt="Azure">
+      </a>
+    </div>
+  </div>
+
+  <div class="glass hidden">
+    <div class="hidden" id="logo2">
+      <a  href="https://en.wikipedia.org/wiki/JavaScript" target="_blank">
+        <img src="./logos/Js.webp" alt="Java scrip">
+      </a>
+    </div>
+  </div>
+
+  <div class="glass hidden">
+    <div class="hidden" id="logo2">
+      <a class="logos" href="https://en.wikipedia.org/wiki/SQL" target="_blank">
+        <img src="./logos/sql.png" alt="SQL">
+      </a>
+    </div>
+  </div>
+
+  <div class="glass hidden">
+    <div class="hidden" id="logo2">
+      <a class="logos" href="https://www.microsoft.com/en-us/power-platform/products/power-bi" target="_blank">
+        <img src="./logos/power-bi-icon.png" alt="POWER Bi">
+      </a>
+    </div>
+  </div>
+
+</div>
+
+    <section class="hidden">
+  <!-- blank space -->
   <section>
-    <p class="hidden" style="text-justify: auto;padding: 10px;color: antiquewhite;font-weight: 100;text-align: center;
-      font-size: larger;">I still Have More to learn!!!</p>
-    <p class="hidden" style="text-justify: auto;padding: 10px;color: antiquewhite;font-weight: 100;text-align: center;
-            font-size: larger;">Last UPDATED:- 13/06/2025 (Added Glass Morphism on nav bar and logo elements)</p>
+    <p  class="hidden"style="font-size: larger; text-align: center; color:antiquewhite">Last UPDATED:- 13/06/2025 (Added Glass Morphism on nav bar and logo elements)</p>
+    </section>
   </section>
   <footer>
     <p>&copy; 20XY "Name of the owner". All rights reserved.</p>
