--- a/my sites/calculator.html
+++ b/my sites/calculator.html
@@ -40,7 +40,7 @@
             <br>
 
             <!-- Display the Cancel button and erase all data entered by the user. -->
-            <input class="func" type="button" id="func" value="C"style="margin-top: 20px;" onclick="form1.answer.value = '' " id="clear">
+            <input class="func clear" type="button" id="func" value="C"style="margin-top: 20px;" onclick="form1.answer.value = '' " id="clear">
             <br>
         </form>
     </div>
